[package]
name = "cfg_watcher"
version = "0.1.0"
edition = "2024"
description = "Configuration watcher wrapper with tokio async"
categories = ["config"]
keywords = ["config", "configuration", "notify", "async"]
repository = "https://github.com/josexy/cfg_watcher"
license = "MIT"
readme = "README.md"

[features]
default = ["json", "yaml", "toml"]

json = ["config/json"]
yaml = ["config/yaml"]
toml = ["config/toml"]
corn = ["config/corn"]
ini = ["config/ini"]
json5 = ["config/json5"]
preserve_order = ["config/preserve_order"]

[[example]]
name = "watcher"

[dependencies]
config = { version = "0.15.19", default-features = false, features = ["async", "convert-case"]}
log = "0.4.29"
notify-debouncer-full = "0.6.0"
serde_core = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.17"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
